--- a/IndustrialServices/Views/Artikel/Create.cshtml
+++ b/IndustrialServices/Views/Artikel/Create.cshtml
@@ -24,7 +24,13 @@
     }
 
 }
-
+<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#summernote').summernote();
+    });
+</script>
 <div class="pagetitle">
     <h1>- Add Article -</h1>
 </div>
