--- a/IndustrialServices/Views/Home/Index.cshtml
+++ b/IndustrialServices/Views/Home/Index.cshtml
@@ -40,10 +40,10 @@
                 <div class="col-lg-6">
                     <div class="card" style="background-color: #3498db;">
                         <div class="card-body">
-                            <h5 class="card-title text-white" style="padding:20px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:20px;">Our Training</h5>
+                            <h5 class="card-title text-white" style="padding:20px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:20px;">The Services We Provide</h5>
                             <div class="container mt-5 mb-5">
 
-                                <div class="row g-4">
+                                <div class="row g-12 justify-content-center">
                                     <div class="col col-lg-3">
                                         <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
                                             <div class="card-body">
@@ -65,19 +65,6 @@
                                         </div>
                                     </div>
 
-                                    <div class="col col-lg-3">
-                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
-                                            <div class="card-body">
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col col-lg-3">
-                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
-                                            <div class="card-body">
-                                            </div>
-                                        </div>
-                                    </div>
 
                                 </div>
 
@@ -94,41 +81,25 @@
                             <div class="container mt-5 mb-5">
                                 <div class="row g-4">
 
-                                    <div class="col col-lg-3">
+                                    <div class="col col-lg-12">
+                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
+                                            <div class="card-body">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col col-lg-12">
+                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
+                                            <div class="card-body">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col col-lg-12">
                                         <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
                                             <div class="card-body">
                                             </div>
                                         </div>
                                     </div>
 
-                                    <div class="col col-lg-3">
-                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
-                                            <div class="card-body">
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col col-lg-3">
-                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
-                                            <div class="card-body">
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <div class="col col-lg-3">
-                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
-                                            <div class="card-body">
-                                            </div>
-                                        </div>
-                                    </div>
-
-
-                                    <div class="col col-lg-3">
-                                        <div class="card" style="background-color: rgba(255,255,255,0.5);border:none;">
-                                            <div class="card-body">
-                                            </div>
-                                        </div>
-                                    </div>  
 
                                 </div>
                             </div>
