--- a/IndustrialServices/Views/Artikel/Draft.cshtml
+++ b/IndustrialServices/Views/Artikel/Draft.cshtml
@@ -23,7 +23,13 @@
     }
 
 }
-
+<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
+<script>
+    $(document).ready(function () {
+        $('#summernote').summernote();
+    });
+</script>
 <div class="pagetitle">
     <h1>- Draft Article -</h1>
 </div>
