--- a/IndustrialServices/Views/Home/FacultyMember.cshtml
+++ b/IndustrialServices/Views/Home/FacultyMember.cshtml
@@ -11,13 +11,19 @@
         <div class="container" style="padding-bottom:15px;">
             <p style="margin-bottom: -3px;color:darkgray;">Industrial Services</p>
             <h5 style="color: white; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-weight: 600; font-size: 36px; margin-bottom: 20px;">Faculty Member</h5>
+            <div class="col-sm-1" style="position:relative;top:30px;left:1040px;">
+                <select class="form-select" name="filter" id="filter">
+                    <option disabled>Sort:</option>
+                    <option value="nama_pengajar">Name</option>
+                    <option value="Technical">Technical</option>
+                    <option value="Non-Technical">Non-Technical</option>
+                    <option value="Technical and Non-Technical">Technical & Non-Technical</option>
+                </select>
+            </div>
         </div>
         <div class="container-md">
         <div class="row">
-            <div class="col-lg-12" >
-                <div class="card" style="background-color: #3498db;">
-                    <div class="card-body">
-                            <h5 class="card-title text-white" style="padding:30px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:24px;">Technical</h5>
+
 
                         <div class="container mt-5 mb-5">
                             <div class="row g-2">
@@ -27,30 +33,6 @@
                             </div>
                             </div>
                         </div>
-                    </div>
-                </div>
-                <br />
-                    <br />
-                    <div class="col-lg-12">
-                        <div class="card" style="background-color: #3498db;">
-                            <div class="card-body">
-                                <h5 class="card-title text-white" style="padding:30px; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size:24px;">Non-Technical</h5>
-
-                                <div class="container mt-5 mb-5">
-                                    <div class="row g-2">
-
-                                        <div class="row d-flex justify-content-center align-items-center h-100" id="non-technical-container">
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-            </div>
-
-
-
-        </div>
             </div>
         </div>
 
@@ -104,54 +86,72 @@
     </div>
 </footer><!-- End Footer -->
 <script>
-    loadTenagaPengajarTechnical()
-    loadTenagaPengajarNonTechnical()
-    function loadTenagaPengajarTechnical() {
+    var filter = "nama_pengajar";
+    loadTenagaPengajarTechnical(filter)
+
+    function loadTenagaPengajarTechnical(filter) {
         var hostname = "https://localhost:7033/";
-        var url = hostname + "GetAllFacultyMembersTechnical";
+        var url = hostname + "GetAllFacultyMembersinWeb";
         var method = "GET";
+
+        // Menambahkan parameter filter dalam URL (contoh: ?filter=nama_pengajar)
+        if (filter) {
+            url += "?filter=" + filter;
+        }
 
         $.ajax({
             url: url,
             method: method,
             contentType: "application/json",
             success: function (data) {
+                // Hapus data sebelumnya dari container
+                $('#technical-container').empty();
+
                 var list = data.data;
-                list.forEach(function (pengajar, index) {
-                    var newRow = '<div class="col col-md-9 col-lg-7 col-xl-5" style="padding-bottom:20px;">' +
+
+                if (list.length > 0) {
+                    list.forEach(function (pengajar, index) {
+                        var newRow = '<div class="col col-md-9 col-lg-7 col-xl-5" style="padding-bottom:20px;">' +
+                            '<div class="card" style="border-radius: 15px; background-color: rgba(255, 255, 255, 0.5); border:none;">' +
+                            '<div class="card-body p-4">' +
+                            '<div class="d-flex text-black">' +
+                            '<div class="flex-shrink-0">' +
+                            '<img src="/assets/img/' + pengajar.foto_pengajar + '" alt="Generic placeholder image" class="img-fluid" style="width: 180px; border-radius: 10px;">' +
+                            '</div>' +
+                            '<div class="flex-grow-1 ms-3">' +
+                            '<h5 class="mb-1">' + pengajar.nama_pengajar + '</h5>' +
+                            '<p class="mb-2 pb-1" style="color: gray;">' + pengajar.bidang_keahlian + '</p>' +
+                            '<div>' +
+                            '</div>' +
+                            '<div class="d-flex pt-1">' +
+                            '<button class="btn btn-primary flex-grow-1 detailsFacultyMember" data-id_pengajar="' + pengajar.id_pengajar + '">Details</button>' +
+                            '</div>' +
+                            '</div>' +
+                            '</div>' +
+                            '</div>' +
+                            '</div>' +
+                            '</div>';
+
+                        $('#technical-container').append(newRow);
+
+                        // Event listener for details button
+                        $('.detailsFacultyMember[data-id_pengajar="' + pengajar.id_pengajar + '"]').click(function () {
+                            var id_pengajar = $(this).data("id_pengajar");
+                            showDetails(id_pengajar);
+                        });
+                    });
+                } else {
+                    // Tampilkan pesan atau card khusus jika tidak ada data yang ditemukan
+                    var noDataCard = '<div class="col-4 text-center">' +
                         '<div class="card" style="border-radius: 15px; background-color: rgba(255, 255, 255, 0.5); border:none;">' +
                         '<div class="card-body p-4">' +
-                        '<div class="d-flex text-black">' +
-                        '<div class="flex-shrink-0">' +
-                        '<img src="/assets/img/' + pengajar.foto_pengajar + '" alt="Generic placeholder image" class="img-fluid" style="width: 180px; border-radius: 10px;">' +
-                        '</div>' +
-                        '<div class="flex-grow-1 ms-3">' +
-                        '<h5 class="mb-1">' + pengajar.nama_pengajar + '</h5>' +
-                        '<p class="mb-2 pb-1" style="color: gray;">' + pengajar.bidang_keahlian + '</p>' +
-                        '<div class="d-flex justify-content-start rounded-3 p-2 mb-2" style="background-color: rgba(255, 255, 255, 0.8)">' +
-                        '<div>' +
-                        '<p class="small text-muted mb-1">Training</p>' +
-                        '<p class="mb-0">' + pengajar.jumlah_pelatihan + '</p>' +
-                        '</div>' +
-                        '</div>' +
-                        '<div class="d-flex pt-1">' +
-                        '<button class="btn btn-primary flex-grow-1 detailsFacultyMember" data-id_pengajar="' + pengajar.id_pengajar + '">Details</button>' +
-                        '</div>' +
-                        '</div>' +
-                        '</div>' +
+                        '<p class="mb-2 pb-1 text-center" style="color: gray;">No data found for the selected filter.</p>' +
                         '</div>' +
                         '</div>' +
                         '</div>';
 
-
-                    $('#technical-container').append(newRow);
-
-                    // Event listener for edit button
-                    $('.editFacultyMember[data-id_pengajar="' + pengajar.id_pengajar + '"]').click(function () {
-                        var id_pengajar = $(this).data("id_pengajar");
-                        loadEditTenagaPengajar(id_pengajar);
-                    });
-                });
+                    $('#technical-container').append(noDataCard);
+                }
             },
             error: function (xhr, status, error) {
                 console.error("Error:", error);
@@ -159,57 +159,13 @@
         });
     }
 
-    function loadTenagaPengajarNonTechnical() {
-        var hostname = "https://localhost:7033/";
-        var url = hostname + "GetAllFacultyMembersNonTechnical";
-        var method = "GET";
 
-        $.ajax({
-            url: url,
-            method: method,
-            contentType: "application/json",
-            success: function (data) {
-                var list = data.data;
-                list.forEach(function (pengajar, index) {
-                    var newRow = '<div class="col col-md-9 col-lg-7 col-xl-5" style="padding-bottom:20px;">' +
-                        '<div class="card" style="border-radius: 15px; background-color: rgba(255, 255, 255, 0.5); border:none;">' +
-                        '<div class="card-body p-4">' +
-                        '<div class="d-flex text-black">' +
-                        '<div class="flex-shrink-0">' +
-                        '<img src="/assets/img/' + pengajar.foto_pengajar + '" alt="Generic placeholder image" class="img-fluid" style="width: 180px; border-radius: 10px;">' +
-                        '</div>' +
-                        '<div class="flex-grow-1 ms-3">' +
-                        '<h5 class="mb-1">' + pengajar.nama_pengajar + '</h5>' +
-                        '<p class="mb-2 pb-1" style="color: gray;">' + pengajar.bidang_keahlian + '</p>' +
-                        '<div class="d-flex justify-content-start rounded-3 p-2 mb-2" style="background-color: rgba(255, 255, 255, 0.8)">' +
-                        '<div>' +
-                        '<p class="small text-muted mb-1">Training</p>' +
-                        '<p class="mb-0">' + pengajar.jumlah_pelatihan + '</p>' +
-                        '</div>' +
-                        '</div>' +
-                        '<div class="d-flex pt-1">' +
-                        '<button class="btn btn-primary flex-grow-1 detailsFacultyMember" data-id_pengajar="' + pengajar.id_pengajar + '">Details</button>' +
-                        '</div>' +
-                        '</div>' +
-                        '</div>' +
-                        '</div>' +
-                        '</div>' +
-                        '</div>';
+    // Event listener untuk perubahan pada elemen <select>
+    $("#filter").change(function () {
+        // Panggil fungsi loadTenagaPengajarTechnical saat ada perubahan pada elemen <select>
+        var selectedFilter = $(this).val();
+        loadTenagaPengajarTechnical(selectedFilter);
+    });
 
-
-                    $('#non-technical-container').append(newRow);
-
-                    // Event listener for edit button
-                    $('.editFacultyMember[data-id_pengajar="' + pengajar.id_pengajar + '"]').click(function () {
-                        var id_pengajar = $(this).data("id_pengajar");
-                        loadEditTenagaPengajar(id_pengajar);
-                    });
-                });
-            },
-            error: function (xhr, status, error) {
-                console.error("Error:", error);
-            }
-        });
-    }
 
 </script>
