--- a/IndustrialServices/Views/Shared/_LayoutAdmin.cshtml
+++ b/IndustrialServices/Views/Shared/_LayoutAdmin.cshtml
@@ -48,13 +48,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- TinyMCE -->
     <!-- include summernote css/js -->
-    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $('#summernote').summernote();
-        });
-    </script>
+
     </script>
       </head>
 <body>
@@ -108,7 +102,7 @@
             </li>
 
             <li class="nav-item">
-                <a class="nav-link collapsed" onclick="artikel()">
+                <a class="nav-link collapsed" asp-action="Index" asp-controller="Artikel">
                     <i class="ri-article-line"></i>
                     <span>Article</span>
                 </a>
@@ -165,11 +159,5 @@
 </html>
 
 <script>
-    function artikel(){
-            Swal.fire({
-                icon: 'error',
-                title: 'Access Denied',
-                text: 'Only Contributors can access this feature.',
-            });
-        }
+
 </script>
